# Kgent

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  start.sh  stop.sh
.github/workflows/: ci.yml
examples/: eval.jsonl
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/public/: home.html
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ConversationList.test.tsx  ConversationList.tsx  EmptyState.test.tsx  EmptyState.tsx  IngestModal.tsx  InputBox.test.tsx  InputBox.tsx  KnowledgeMap.tsx  Logo.tsx  Message.test.tsx  Message.tsx  ProviderPicker.test.tsx  ProviderPicker.tsx  SettingsModal.tsx  Sidebar.test.tsx  Sidebar.tsx  Toast.test.tsx  Toast.tsx
frontend/src/lib/: api.ts  clipboard.ts  storage.test.ts  storage.ts
k/: Logo K v1.html  Logo K.html
kgent/: agent.py  chat_store.py  cli.py  eval.py  extractors.py  graph.py  graph_store.py  ingest.py  keystore.py  logging_config.py  retriever.py  server.py  settings.py  store.py  stores_chroma.py
kgent/web/: home.html  index.html
kgent/web/assets/: index--lGs_3H7.css  index-BHkzYpPW.js  index-BLpPiEO0.js  index-BWb_jFuQ.css  index-B_Hk_Jrf.css  index-BcjW5N7l.js  index-BozLO0i_.js  index-C-qAvRlb.css  index-C2wGk-ya.js  index-C95TS37I.js  (+15 more)
tests/: test_chat_store.py  test_eval.py  test_extractors.py  test_graph.py  test_graph_store.py  test_ingest.py  test_keystore.py  test_retriever.py  test_server.py  test_settings.py  test_store.py
